--- a/README
+++ b/README
@@ -22,6 +22,7 @@ Runtime requirements:
   libtiff5-3.7.3-1
   libxml2-2.6.26-1
   libxslt-1.1.17-1
+  openssl-0.9.8b-1
   qt3-3.3.6-1
 
 Build requirements:
