--- a/README
+++ b/README
@@ -6,61 +6,62 @@ these libraries, misc HTML documentation, theme modules, and regression
 tests.
 
 Runtime requirements:
-  cygwin-1.5.21-2
+  cygwin-1.5.23-2
   jasper-1.701.0-1
-  libX11_6-1.0.2-1
-  libXrender1-0.9.1-1
+  libX11_6-1.1.1-1
+  libXrender1-0.9.2-1
   libart_lgpl2-2.3.17-1
   libaspell15-0.50.3-1
-  libbz2_1-1.0.3-1
+  libbz2_1-1.0.3-2
   libhspell1-1.0-2
-  libidn11-0.6.5-2
-  libjpeg62-6b-11
+  libidn11-0.6.7-1
+  libjpeg62-6b-12
   liblua50-5.0.2-1
-  libopenexr2-1.2.2-1
+  libopenexr2-1.4.0a-1
   libpcre0-6.7-1
-  libtiff5-3.8.2-2
-  libxml2-2.6.26-1
-  libxslt-1.1.17-1
-  openssl-0.9.8b-1
-  qt3-3.3.6-1
+  libtiff5-3.8.2-3
+  libxml2-2.6.27-1
+  libxslt-1.1.20-1
+  openssl-0.9.8d-1
+  qt3-3.3.7-1
 
 Build requirements:
 (besides corresponding devel packages)
-  cygwin-1.5.21-2
-  autoconf2.5-2.59-2
-  automake1.9-1.9.6-1
-  binutils-20060709-1
-  cygport-0.2.5-1
-  gawk-3.1.5-2
-  gcc-core-3.4.4-1
-  gcc-g++-3.4.4-1
-  libtool1.5-1.5.22-1
+  cygwin-1.5.23-2
+  autoconf2.5-2.61-1
+  automake1.9-1.9.6-2
+  binutils-20060817-1
+  cygport-0.2.9-1
+  doxygen-1.5.1-1
+  gawk-3.1.5-4
+  gcc-core-3.4.4-3
+  gcc-g++-3.4.4-3
+  libtool1.5-1.5.23a-2
   make-3.81-1
   perl-5.8.7-5
-  sed-4.1.5-1
+  sed-4.1.5-2
 
 Canonical website:
   http://www.kde.org/
 
 Canonical download:
-  ftp://ftp.kde.org/pub/kde/stable/3.5.5/src/
+  ftp://ftp.kde.org/pub/kde/stable/3.5.6/src/
 
 -------------------------------------------
 
 Build instructions:
-  unpack kdelibs-3.5.5-X-src.tar.bz2
+  unpack kdelibs-3.5.6-X-src.tar.bz2
     if you use setup to install this src package, it will be
 	 unpacked under /usr/src automatically
   cd /usr/src
-  cygport ./kdelibs-3.5.5-X.cygport all
+  cygport ./kdelibs-3.5.6-X.cygport all
 
 This will create:
-  /usr/src/kdelibs-3.5.5-X-src.tar.bz2
-  /usr/src/kdelibs-3.5.5-X.tar.bz2
-  /usr/src/kdelibs-devel-3.5.5-X.tar.bz2
-  /usr/src/kdelibs-doc-3.5.5-X.tar.bz2
-  /usr/src/kdelibs4-3.5.5-X.tar.bz2
+  /usr/src/kdelibs-3.5.6-X-src.tar.bz2
+  /usr/src/kdelibs-3.5.6-X.tar.bz2
+  /usr/src/kdelibs-devel-3.5.6-X.tar.bz2
+  /usr/src/kdelibs-doc-3.5.6-X.tar.bz2
+  /usr/src/kdelibs4-3.5.6-X.tar.bz2
 
 -------------------------------------------
 
@@ -226,13 +227,13 @@ Files included in the kdelibs package:
   /usr/share/config/language.codes
   /usr/share/config/ui/kprintpreviewui.rc
   /usr/share/config/ui/ui_standards.rc
-  /usr/share/doc/Cygwin/kdelibs-3.5.5.README
-  /usr/share/doc/kdelibs-3.5.5/AUTHORS
-  /usr/share/doc/kdelibs-3.5.5/COPYING
-  /usr/share/doc/kdelibs-3.5.5/COPYING.LIB
-  /usr/share/doc/kdelibs-3.5.5/INSTALL
-  /usr/share/doc/kdelibs-3.5.5/README
-  /usr/share/doc/kdelibs-3.5.5/TODO
+  /usr/share/doc/Cygwin/kdelibs-3.5.6.README
+  /usr/share/doc/kdelibs-3.5.6/AUTHORS
+  /usr/share/doc/kdelibs-3.5.6/COPYING
+  /usr/share/doc/kdelibs-3.5.6/COPYING.LIB
+  /usr/share/doc/kdelibs-3.5.6/INSTALL
+  /usr/share/doc/kdelibs-3.5.6/README
+  /usr/share/doc/kdelibs-3.5.6/TODO
   /usr/share/emoticons/Default/*
   /usr/share/icons/crystalsvg/*/*/*
   /usr/share/icons/default.kde
@@ -273,6 +274,7 @@ Files included in the kdelibs package:
   /usr/share/services/kjavaappletviewer.desktop
   /usr/share/services/kmailservice.protocol
   /usr/share/services/kmultipart.desktop
+  /usr/share/services/knotify.desktop
   /usr/share/services/kresources/kabc/dir.desktop
   /usr/share/services/kresources/kabc/file.desktop
   /usr/share/services/kresources/kabc/ldapkio.desktop
@@ -490,6 +492,8 @@ Files included in the kdelibs4 runtime package:
   /usr/lib/kde3/kjavaappletviewer.la
   /usr/lib/kde3/klauncher.dll
   /usr/lib/kde3/klauncher.la
+  /usr/lib/kde3/knotify.dll
+  /usr/lib/kde3/knotify.la
   /usr/lib/kde3/kspell_aspell.dll
   /usr/lib/kde3/kspell_aspell.la
   /usr/lib/kde3/kspell_hspell.dll
@@ -1332,6 +1336,9 @@ Files included in the documentation package:
 ------------------
 
 Port Notes:
+
+----- version 3.5.6-1 -----
+Version bump.
 
 ----- version 3.5.5-1 -----
 Version bump.
