--- a/README
+++ b/README
@@ -6,32 +6,33 @@ these libraries, misc HTML documentation, theme modules, and regression
 tests.
 
 Runtime requirements:
-  cygwin-1.5.23-2
-  jasper-1.701.0-1
+  cygwin-1.5.24-2
+  arts-1.5.6-1
   libX11_6-1.1.1-1
   libXrender1-0.9.2-1
-  libart_lgpl2-2.3.17-1
+  libart_lgpl2-2.3.19-1
   libaspell15-0.50.3-1
   libbz2_1-1.0.3-2
   libhspell1-1.0-2
   libidn11-0.6.7-1
+  libjasper1-1.900.1-1
   libjpeg62-6b-12
   liblua50-5.0.2-1
   libopenexr2-1.4.0a-1
-  libpcre0-6.7-1
+  libpcre0-7.1-1
   libtiff5-3.8.2-3
-  libxml2-2.6.27-1
+  libxml2-2.6.28-1
   libxslt-1.1.20-1
-  openssl-0.9.8d-1
-  qt3-3.3.7-1
+  openssl-0.9.8e-3
+  qt3-3.3.8-1
 
 Build requirements:
 (besides corresponding devel packages)
-  cygwin-1.5.23-2
+  cygwin-1.5.24-2
   autoconf2.5-2.61-1
   automake1.9-1.9.6-2
   binutils-20060817-1
-  cygport-0.2.9-1
+  cygport-0.2.11-1
   doxygen-1.5.1-1
   gawk-3.1.5-4
   gcc-core-3.4.4-3
@@ -45,23 +46,23 @@ Canonical website:
   http://www.kde.org/
 
 Canonical download:
-  ftp://ftp.kde.org/pub/kde/stable/3.5.6/src/
+  ftp://ftp.kde.org/pub/kde/stable/3.5.7/src/
 
 -------------------------------------------
 
 Build instructions:
-  unpack kdelibs-3.5.6-X-src.tar.bz2
+  unpack kdelibs-3.5.7-X-src.tar.bz2
     if you use setup to install this src package, it will be
 	 unpacked under /usr/src automatically
   cd /usr/src
-  cygport ./kdelibs-3.5.6-X.cygport all
+  cygport ./kdelibs-3.5.7-X.cygport all
 
 This will create:
-  /usr/src/kdelibs-3.5.6-X-src.tar.bz2
-  /usr/src/kdelibs-3.5.6-X.tar.bz2
-  /usr/src/kdelibs-devel-3.5.6-X.tar.bz2
-  /usr/src/kdelibs-doc-3.5.6-X.tar.bz2
-  /usr/src/kdelibs4-3.5.6-X.tar.bz2
+  /usr/src/kdelibs-3.5.7-X-src.tar.bz2
+  /usr/src/kdelibs-3.5.7-X.tar.bz2
+  /usr/src/kdelibs-devel-3.5.7-X.tar.bz2
+  /usr/src/kdelibs-doc-3.5.7-X.tar.bz2
+  /usr/src/kdelibs4-3.5.7-X.tar.bz2
 
 -------------------------------------------
 
@@ -232,13 +233,13 @@ Files included in the kdelibs package:
   /usr/share/config/language.codes
   /usr/share/config/ui/kprintpreviewui.rc
   /usr/share/config/ui/ui_standards.rc
-  /usr/share/doc/Cygwin/kdelibs-3.5.6.README
-  /usr/share/doc/kdelibs-3.5.6/AUTHORS
-  /usr/share/doc/kdelibs-3.5.6/COPYING
-  /usr/share/doc/kdelibs-3.5.6/COPYING.LIB
-  /usr/share/doc/kdelibs-3.5.6/INSTALL
-  /usr/share/doc/kdelibs-3.5.6/README
-  /usr/share/doc/kdelibs-3.5.6/TODO
+  /usr/share/doc/Cygwin/kdelibs-3.5.7.README
+  /usr/share/doc/kdelibs-3.5.7/AUTHORS
+  /usr/share/doc/kdelibs-3.5.7/COPYING
+  /usr/share/doc/kdelibs-3.5.7/COPYING.LIB
+  /usr/share/doc/kdelibs-3.5.7/INSTALL
+  /usr/share/doc/kdelibs-3.5.7/README
+  /usr/share/doc/kdelibs-3.5.7/TODO
   /usr/share/emoticons/Default/*
   /usr/share/icons/crystalsvg/*/*/*
   /usr/share/icons/default.kde
@@ -1359,6 +1360,9 @@ Files included in the documentation package:
 ------------------
 
 Port Notes:
+
+----- version 3.5.7-1 -----
+Version bump.
 
 ----- version 3.5.6-1 -----
 Version bump.
