--- a/README
+++ b/README
@@ -7,24 +7,33 @@ tests.
 
 Runtime requirements:
   cygwin-1.5.24-2
-  arts-1.5.6-1
-  libX11_6-1.1.1-1
-  libXrender1-0.9.2-1
+  arts-1.5.7-1
+  gamin-0.1.9-1
+  libICE6-1.0.4-1
+  libSM6-1.0.3-1
+  libX11_6-1.1.3-1
+  libXext6-1.0.3-1
+  libXrender1-0.9.4-1
   libart_lgpl2-2.3.19-1
   libaspell15-0.50.3-1
   libbz2_1-1.0.3-2
+  libgssapi2-1.0.1-1
   libhspell1-1.0-2
-  libidn11-0.6.7-1
-  libjasper1-1.900.1-1
+  libidn11-1.1-1
+  libilmbase6-1.0.0-1
+  libjasper1-1.900.1-2
   libjpeg62-6b-12
-  liblua50-5.0.2-1
-  libopenexr2-1.4.0a-1
-  libpcre0-7.1-1
+  libopenexr6-1.6.1-1
+  libpcre0-7.4-1
   libtiff5-3.8.2-3
-  libxml2-2.6.28-1
-  libxslt-1.1.20-1
+  libxml2-2.6.30-1
+  libxslt-1.1.22-1
+  lua50-5.0.2-1
+  minires-1.01-1
   openssl-0.9.8e-3
-  qt3-3.3.8-1
+  qt3-3.3.8-3
+  rgb-1.0.1-1
+  zlib-1.2.3-2
 
 Build requirements:
 (besides corresponding devel packages)
@@ -32,7 +41,7 @@ Build requirements:
   autoconf2.5-2.61-1
   automake1.9-1.9.6-2
   binutils-20060817-1
-  cygport-0.2.11-1
+  cygport-0.3.7-1
   doxygen-1.5.1-1
   gawk-3.1.5-4
   gcc-core-3.4.4-3
@@ -139,27 +148,17 @@ Files included in the kdelibs package:
   /usr/bin/makekdewidgets.exe
   /usr/bin/meinproc.exe
   /usr/bin/preparetips
-  /usr/lib/libkdeinit_dcopserver.dll.a
   /usr/lib/libkdeinit_dcopserver.la
-  /usr/lib/libkdeinit_kaddprinterwizard.dll.a
   /usr/lib/libkdeinit_kaddprinterwizard.la
-  /usr/lib/libkdeinit_kbuildsycoca.dll.a
   /usr/lib/libkdeinit_kbuildsycoca.la
-  /usr/lib/libkdeinit_kcmshell.dll.a
   /usr/lib/libkdeinit_kcmshell.la
-  /usr/lib/libkdeinit_kconf_update.dll.a
   /usr/lib/libkdeinit_kconf_update.la
-  /usr/lib/libkdeinit_kcookiejar.dll.a
   /usr/lib/libkdeinit_kcookiejar.la
   /usr/lib/libkdeinit_kded.dll.a
   /usr/lib/libkdeinit_kded.la
-  /usr/lib/libkdeinit_kio_http_cache_cleaner.dll.a
   /usr/lib/libkdeinit_kio_http_cache_cleaner.la
-  /usr/lib/libkdeinit_kio_uiserver.dll.a
   /usr/lib/libkdeinit_kio_uiserver.la
-  /usr/lib/libkdeinit_klauncher.dll.a
   /usr/lib/libkdeinit_klauncher.la
-  /usr/lib/libkdeinit_kmcop.dll.a
   /usr/lib/libkdeinit_kmcop.la
   /usr/share/applications/kde/kresources.desktop
   /usr/share/apps/LICENSES/ARTISTIC
@@ -1360,6 +1359,10 @@ Files included in the documentation package:
 ------------------
 
 Port Notes:
+
+----- version 3.5.7-1 -----
+Version bump.
+Enabled FAM and Kerberos V support.
 
 ----- version 3.5.7-1 -----
 Version bump.
