--- a/README
+++ b/README
@@ -6,71 +6,70 @@ these libraries, misc HTML documentation, theme modules, and regression
 tests.
 
 Runtime requirements:
-  cygwin-1.5.24-2
-  arts-1.5.7-1
+  cygwin-1.5.25-7
+  arts-1.5.9-1
   libICE6-1.0.4-1
   libSM6-1.0.3-1
   libX11_6-1.1.3-1
   libXext6-1.0.3-1
   libXrender1-0.9.4-1
-  libart_lgpl2-2.3.19-1
-  libaspell15-0.50.3-1
+  libart_lgpl2-2.3.20-1
+  libaspell15-0.60.5-1
   libbz2_1-1.0.3-2
   libgssapi2-1.0.1-1
   libhspell1-1.0-2
-  libidn11-1.1-1
-  libilmbase6-1.0.0-1
+  libidn11-1.3-1
+  libilmbase6-1.0.1-1
   libjasper1-1.900.1-2
   libjpeg62-6b-12
   libopenexr6-1.6.1-1
-  libpcre0-7.4-1
+  libpcre0-7.6-1
   libtiff5-3.8.2-3
   libxml2-2.6.30-1
   libxslt-1.1.22-1
   lua50-5.0.2-1
   minires-1.01-1
-  openssl-0.9.8e-3
-  qt3-3.3.8-3
+  openssl-0.9.8g-1
+  qt3-3.3.8-4
   rgb-1.0.1-1
   zlib-1.2.3-2
 
 Build requirements:
 (besides corresponding devel packages)
-  cygwin-1.5.24-2
   autoconf2.5-2.61-1
-  automake1.9-1.9.6-2
+  automake1.10-1.10-1
   binutils-20060817-1
-  cygport-0.3.7-1
+  cygport-0.3.8-1
   doxygen-1.5.1-1
-  gawk-3.1.5-4
+  gawk-3.1.6-1
   gcc-core-3.4.4-3
   gcc-g++-3.4.4-3
   libtool1.5-1.5.23a-2
   make-3.81-1
-  perl-5.8.7-5
+  perl-5.8.8-4
   sed-4.1.5-2
 
 Canonical website:
   http://www.kde.org/
 
 Canonical download:
-  ftp://ftp.kde.org/pub/kde/stable/3.5.8/src/
+  ftp://ftp.kde.org/pub/kde/stable/3.5.9/src/
 
 -------------------------------------------
 
 Build instructions:
-  unpack kdelibs-3.5.8-X-src.tar.bz2
+  unpack kdelibs-3.5.9-X-src.tar.bz2
     if you use setup to install this src package, it will be
 	 unpacked under /usr/src automatically
   cd /usr/src
-  cygport ./kdelibs-3.5.8-X.cygport all
+  cygport ./kdelibs-3.5.9-X.cygport all
 
 This will create:
-  /usr/src/kdelibs-3.5.8-X-src.tar.bz2
-  /usr/src/kdelibs-3.5.8-X.tar.bz2
-  /usr/src/kdelibs-devel-3.5.8-X.tar.bz2
-  /usr/src/kdelibs-doc-3.5.8-X.tar.bz2
-  /usr/src/kdelibs4-3.5.8-X.tar.bz2
+  /usr/src/kdelibs-3.5.9-X-src.tar.bz2
+  /usr/src/kdelibs-3.5.9-X.tar.bz2
+  /usr/src/kdelibs-devel-3.5.9-X.tar.bz2
+  /usr/src/kdelibs-doc-3.5.9-X.tar.bz2
+  /usr/src/kdelibs4-3.5.9-X.tar.bz2
 
 -------------------------------------------
 
@@ -232,13 +231,13 @@ Files included in the packages:
   /usr/share/config/language.codes
   /usr/share/config/ui/kprintpreviewui.rc
   /usr/share/config/ui/ui_standards.rc
-  /usr/share/doc/Cygwin/kdelibs-3.5.8.README
-  /usr/share/doc/kdelibs-3.5.8/AUTHORS
-  /usr/share/doc/kdelibs-3.5.8/COPYING
-  /usr/share/doc/kdelibs-3.5.8/COPYING.LIB
-  /usr/share/doc/kdelibs-3.5.8/INSTALL
-  /usr/share/doc/kdelibs-3.5.8/README
-  /usr/share/doc/kdelibs-3.5.8/TODO
+  /usr/share/doc/Cygwin/kdelibs-3.5.9.README
+  /usr/share/doc/kdelibs-3.5.9/AUTHORS
+  /usr/share/doc/kdelibs-3.5.9/COPYING
+  /usr/share/doc/kdelibs-3.5.9/COPYING.LIB
+  /usr/share/doc/kdelibs-3.5.9/INSTALL
+  /usr/share/doc/kdelibs-3.5.9/README
+  /usr/share/doc/kdelibs-3.5.9/TODO
   /usr/share/emoticons/Default/*
   /usr/share/icons/crystalsvg/*/*/*
   /usr/share/icons/default.kde
@@ -1356,6 +1355,9 @@ Files included in the packages:
 ------------------
 
 Port Notes:
+
+----- version 3.5.9-1 -----
+Version bump.
 
 ----- version 3.5.8-2 -----
 Rebuilt without FAM support due to excessive CPU usage.
