--- a/README
+++ b/README
@@ -5,53 +5,59 @@ execution of a KDE program, as well as misc HTML documentation, theme
 modules, and regression tests.
 
 Runtime requirements:
-  cygwin-1.7.1-1
+  cygwin-1.7.5-1
   libaspell15-0.60.5-1
+  libattica0-0.1.3-1
   libbz2_1-1.0.5-10
   libenchant1-1.5.0-1
   libfam0-0.1.10-10
   libgcc1-4.3.4-3
   libgif4-4.1.6-10
-  libGL1-7.5.2-1
+  libGL1-7.6.1-1
   libgssapi2-1.2.1-1
   libICE6-1.0.6-1
   libintl8-0.17-11
   libjasper1-1.900.1-1
   libjpeg7-7-10
-  liblzma1-4.999.9beta-10
+  liblzma1-4.999.9beta-11
   libpcre0-8.00-1
-  libphonon4-4.3.1-2
+  libphonon4-4.4.0-1
   libpng12-1.2.35-10
-  libQt3Support4-4.5.3-2
-  libQtCore4-4.5.3-2
-  libQtDBus4-4.5.3-2
-  libQtDesigner4-4.5.3-2
-  libQtGui4-4.5.3-2
-  libQtNetwork4-4.5.3-2
-  libQtOpenGL4-4.5.3-2
-  libQtScript4-4.5.3-2
-  libQtSvg4-4.5.3-2
-  libQtWebKit4-4.5.3-2
-  libQtXml4-4.5.3-2
+  libqca2-2.0.2-2
+  libQt3Support4-4.6.2-1
+  libQtCore4-4.6.2-1
+  libQtDBus4-4.6.2-1
+  libQtDesigner4-4.6.2-1
+  libQtGui4-4.6.2-1
+  libQtNetwork4-4.6.2-1
+  libQtOpenGL4-4.6.2-1
+  libQtScript4-4.6.2-1
+  libQtSvg4-4.6.2-1
+  libQtWebKit4-4.6.2-1
+  libQtXml4-4.6.2-1
   libSM6-1.1.1-1
-  libsoprano4-2.3.1-1
+  libsoprano4-2.4.3-1
   libstdc++6-4.3.4-3
   libstreamanalyzer0-0.7.0-1
-  libX11_6-1.3.2-2
+  libX11_6-1.3.3-1
   libXcursor1-1.1.10-1
+  libXext6-1.1.1-1
   libXfixes3-4.0.4-1
   libxml2-2.7.6-1
   libXrender1-0.9.5-1
   libxslt-1.1.26-1
+  libXss1-1.2.0-1
   libXtst6-1.1.0-1
+  shared-desktop-ontologies
+  shared-mime-info
   zlib0-1.2.3-10
 
 Build requirements:
 (besides corresponding -devel packages)
   automoc4-0.9.88-10
-  binutils-2.19.51-1
+  binutils-2.20.51-1
   cmake-2.8.0-11
-  cygport-0.9.80-1
+  cygport-0.9.83-1
   gawk-3.1.7-1
   gcc4-core-4.3.4-3
   gcc4-g++-4.3.4-3
@@ -67,24 +73,27 @@ Canonical download:
 -------------------------------------------
 
 Build instructions:
-  unpack kdelibs-4.3.5-X-src.tar.bz2
+  unpack kdelibs-4.4.2-X-src.tar.bz2
     if you use setup to install this src package, it will be
 	 unpacked under /usr/src automatically
   cd /usr/src
-  cygport ./kdelibs-4.3.5-X.cygport all
+  cygport ./kdelibs-4.4.2-X.cygport all
 
 This will create:
-  /usr/src/kdelibs-4.3.5-X-src.tar.bz2
-  /usr/src/libkdecore5-4.3.5-X.tar.bz2
-  /usr/src/libkdecore5-devel-4.3.5-X.tar.bz2
-  /usr/src/libnepomuk4-4.3.5-X.tar.bz2
-  /usr/src/libnepomuk4-devel-4.3.5-X.tar.bz2
-  /usr/src/libplasma3-4.3.5-X.tar.bz2
-  /usr/src/libplasma-devel-4.3.5-X.tar.bz2
+  /usr/src/kdelibs-4.4.2-X-src.tar.bz2
+  /usr/src/libkdecore5-4.4.2-X.tar.bz2
+  /usr/src/libkdecore5-devel-4.4.2-X.tar.bz2
+  /usr/src/libnepomuk4-4.4.2-X.tar.bz2
+  /usr/src/libnepomuk4-devel-4.4.2-X.tar.bz2
+  /usr/src/libplasma3-4.4.2-X.tar.bz2
+  /usr/src/libplasma-devel-4.4.2-X.tar.bz2
 
 -------------------------------------------
 
 Port Notes:
+
+----- version 4.4.2-1 -----
+Version bump for KDE 4.4.
 
 ----- version 4.3.5-1 -----
 Version bump.
