--- a/README
+++ b/README
@@ -7,9 +7,9 @@ modules, and regression tests.
 Runtime requirements:
   cygwin-1.7.5-1
   libaspell15-0.60.5-1
-  libattica0-0.1.3-1
+  libattica0-0.1.4-1
   libbz2_1-1.0.5-10
-  libenchant1-1.5.0-1
+  libenchant1-1.6.0-1
   libfam0-0.1.10-10
   libgcc1-4.3.4-3
   libgif4-4.1.6-10
@@ -21,7 +21,7 @@ Runtime requirements:
   libjpeg7-7-10
   liblzma1-4.999.9beta-11
   libpcre0-8.00-1
-  libphonon4-4.4.0-1
+  libphonon4-4.4.1-1
   libpng12-1.2.35-10
   libqca2-2.0.2-2
   libQt3Support4-4.6.2-1
@@ -38,7 +38,7 @@ Runtime requirements:
   libSM6-1.1.1-1
   libsoprano4-2.4.3-1
   libstdc++6-4.3.4-3
-  libstreamanalyzer0-0.7.0-1
+  libstreamanalyzer0-0.7.2-1
   libX11_6-1.3.3-1
   libXcursor1-1.1.10-1
   libXext6-1.1.1-1
@@ -55,9 +55,9 @@ Runtime requirements:
 Build requirements:
 (besides corresponding -devel packages)
   automoc4-0.9.88-10
-  binutils-2.20.51-1
-  cmake-2.8.0-11
-  cygport-0.9.83-1
+  binutils-2.20.51-2
+  cmake-2.8.1-11
+  cygport-0.9.84-1
   gawk-3.1.7-1
   gcc4-core-4.3.4-3
   gcc4-g++-4.3.4-3
@@ -73,24 +73,27 @@ Canonical download:
 -------------------------------------------
 
 Build instructions:
-  unpack kdelibs-4.4.3-X-src.tar.bz2
+  unpack kdelibs-4.4.4-X-src.tar.bz2
     if you use setup to install this src package, it will be
 	 unpacked under /usr/src automatically
   cd /usr/src
-  cygport ./kdelibs-4.4.3-X.cygport all
+  cygport ./kdelibs-4.4.4-X.cygport all
 
 This will create:
-  /usr/src/kdelibs-4.4.3-X-src.tar.bz2
-  /usr/src/libkdecore5-4.4.3-X.tar.bz2
-  /usr/src/libkdecore5-devel-4.4.3-X.tar.bz2
-  /usr/src/libnepomuk4-4.4.3-X.tar.bz2
-  /usr/src/libnepomuk4-devel-4.4.3-X.tar.bz2
-  /usr/src/libplasma3-4.4.3-X.tar.bz2
-  /usr/src/libplasma-devel-4.4.3-X.tar.bz2
+  /usr/src/kdelibs-4.4.4-X-src.tar.bz2
+  /usr/src/libkdecore5-4.4.4-X.tar.bz2
+  /usr/src/libkdecore5-devel-4.4.4-X.tar.bz2
+  /usr/src/libnepomuk4-4.4.4-X.tar.bz2
+  /usr/src/libnepomuk4-devel-4.4.4-X.tar.bz2
+  /usr/src/libplasma3-4.4.4-X.tar.bz2
+  /usr/src/libplasma-devel-4.4.4-X.tar.bz2
 
 -------------------------------------------
 
 Port Notes:
+
+----- version 4.4.4-1 -----
+Version bump.
 
 ----- version 4.4.3-1 -----
 Version bump for KDE 4.4.
